Fixed overflow error for the reviews.scss

--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -200,6 +200,7 @@
   }
 
   .reviews__footer {
+    max-width: 50%;
     margin-top: 58px;
   }
 
